[gd_scene load_steps=4 format=3 uid="uid://l1uxm4lyrkd4"]

[ext_resource type="PackedScene" uid="uid://wx3gdmg7apdi" path="res://art/models/furniture/oxygen_filling_station.glb" id="1_vyay6"]
[ext_resource type="Script" path="res://furniture/scripts/OxygenFillingStation.gd" id="2_6qdfh"]

[sub_resource type="BoxShape3D" id="BoxShape3D_6g0ow"]
size = Vector3(2.18994, 1.25854, 0.561157)

[node name="OxygenFillingStation" instance=ExtResource("1_vyay6")]
script = ExtResource("2_6qdfh")

[node name="OxygenTanks" type="Node3D" parent="." index="0"]

[node name="Pos4" type="Marker3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.816524, 0, 0.057)

[node name="Pos3" type="Marker3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.277266, 0, 0.057)

[node name="Pos2" type="Marker3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.269641, 0, 0.057)

[node name="Pos1" type="Marker3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0, 0.057)

[node name="Oxygen Filling Station" parent="." index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.149739, 0.244606, 0)

[node name="Area3D" type="Area3D" parent="." index="6"]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.14917, -0.520386, 0.0466919)
shape = SubResource("BoxShape3D_6g0ow")

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
